fixed jumpy links

--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ body {
 
 .nav-tabs li a {
   color: #fff;
+  border: none;
 }
 
 .nav-tabs {
